@@ -24,7 +24,7 @@
 \begin{document}
 \title{\pbctools Plugin User's Guide}
 \author{Jerome Henin \and Olaf Lenz \and Cameron Mura \and Jan Saam}
-\date{Version 2.6}
+\date{Version 2.7}
 
 \maketitle
 
