@@ -8,5 +8,5 @@
 # script is sourced, the variable $dir must contain the
 # full path name of this file's directory.
 
-package ifneeded pbcgui 2.6 [list source [file join $dir pbcgui.tcl]]
-package ifneeded pbctools 2.6 [list source [file join $dir pbctools.tcl]]\n[list source [file join $dir pbcbox.tcl]]\n[list source [file join $dir pbcset.tcl]]\n[list source [file join $dir pbcjoin.tcl]]\n[list source [file join $dir pbcwrap.tcl]]\n[list source [file join $dir pbcunwrap.tcl]]
+package ifneeded pbcgui 2.7 [list source [file join $dir pbcgui.tcl]]
+package ifneeded pbctools 2.7 [list source [file join $dir pbcjoin.tcl]]\n[list source [file join $dir pbcset.tcl]]\n[list source [file join $dir pbcunwrap.tcl]]\n[list source [file join $dir pbcwrap.tcl]]\n[list source [file join $dir pbcbox.tcl]]\n[list source [file join $dir pbctools.tcl]]
